feat (Search): finish implement Search

--- a/UnsplashPackages/Sources/Localizable/Localizable.xcstrings
+++ b/UnsplashPackages/Sources/Localizable/Localizable.xcstrings
@@ -104,6 +104,40 @@
           }
         }
       }
+    },
+    "search.notFound.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Results not found"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "needs_review",
+            "value" : "Pas de résultats"
+          }
+        }
+      }
+    },
+    "search.view.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Search"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Recherche"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
